--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 encoding: utf-8
 title: 英目花盗
-description: 英目花盗的个人博客
+description: 英目花盗的不老歌
 keywords: Python,Blog,Css,Html,JavaScript
 author: ymhd
 
 
 baseurl: ''
+# 菜单
 menu:
   - title: Home
     url: /
@@ -18,11 +19,13 @@ menu:
   - title: About
     url: /pages/about.html
 
+# 路径配置
 cssurl: /static/css
 jsurl: /static/js
 tagsurl: /pages/tags.html
 swimgurl: /static/img/software
 
+# 下面这些不要修改
 permalink: /posts/:year/:month/:day/:title.html
 kramdown:
   auto_ids: true
