--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 英目花盗的不老歌
 keywords: Python,Blog,Css,Html,JavaScript
 author: ymhd
 
-
+domainUrl: 'https://blog.ymhd.xyz'
 baseurl: ''
 # 菜单
 menu:
